- Fixed: Displaying of items in GUI menu with strict filtering enabled