@@ -1,1 +1,5 @@
-- Fixed: Displaying of items in GUI menu with strict filtering enabled
++ Added: [Suggestion] You can now add items with model data to the list of smeltable items in config.yml:
+      # Define a list of additional blocks that can be smelt in a furnace. For example blocks from data-packs.
+      # You either need to add material values or model-data number values.
+      # Material values can be found here: https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/Material.html
+      smelt_list: []
